# Simpleinfer

./: CMakeLists.txt  README.md
include/base/: alloc.h  base.h
src/: CMakeLists.txt  main.cpp
src/base/: alloc.cpp  base.cpp
